# athena-svn-mirror

third/ORBit2/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  Makefile.shared  NEWS  ORBit-2.0.pc.in  ORBit.spec  ORBit.spec.in  ORBit2.m4  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  orbit2-config.in
third/ORBit2/docs/: Makefile.am  Makefile.in
third/ORBit2/include/: Makefile.in
third/ORBit2/linc2/: ChangeLog  Makefile.in
third/ORBit2/src/: Makefile.in
third/ORBit2/test/: Makefile.am  Makefile.in  echo-client-t.c  echo-client.c  echo-server.c  echo-share.h  echo-srv.c  echo.idl  empty-client.c  empty-server.c  test-any-client.c  test-any-server.c  test-corbaloc.c  test-giop-frag.h  test-giop.c  test-mem.c  test-performance.c  test1.c  typelib-dump.c
third/acme/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  acme.spec  acme.spec.in  autogen.sh  config.h.in  configure  configure.in  intltool-merge.in  mkinstalldirs
third/acme/po/: ChangeLog  POTFILES.in  acme.pot  am.gmo  am.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  he.gmo  he.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lv.gmo  lv.po  mk.gmo  mk.po  mn.gmo  mn.po  ms.gmo  (+31 more)
third/acme/src/: Makefile.am  Makefile.in  acme-properties.c  acme-properties.glade  acme.c  acme.desktop.in  acme.h  acme.schemas.in  fb-level-private.h  fb-level.c  fb-level.gob  fb-level.h  g-volume-private.h  g-volume.c  g-volume.gob  g-volume.h  volume-alsa-private.h  volume-alsa.c  volume-alsa.gob  volume-alsa.h  volume-oss-private.h  volume-oss.c  volume-oss.gob  volume-oss.h
third/ammonite/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  ammonite.spec.in  ammoniteConf.sh.in  configure  configure.athena  configure.in  mkinstalldirs
third/ammonite/data/: Makefile.am  Makefile.in  eazel1_dsa_cert.pem  eazel_dsa_cert.pem
third/ammonite/doc/: Makefile.am  Makefile.in
third/ammonite/idl/: Makefile.am  (+2 more)
third/aspell/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  ltmain.sh
third/bonobo/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  bonobo.spec  bonobo.spec.in  config.h.in  configure  configure.in  mkinstalldirs  xml-i18n-merge.in  xml-i18n-update.in
third/bonobo-conf/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  bonobo-conf.spec  bonobo-conf.spec.in  bonobo_confConf.sh.in  config.h.in  configure  configure.in  ltmain.sh  mkinstalldirs  xml-i18n-extract.in  xml-i18n-merge.in  xml-i18n-update.in
third/bug-buddy/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  acconfig.h  aclocal.m4  bug-buddy.schemas  bug-buddy.spec  bug-buddy.spec.in  config.h.in  configure  configure.in  intltool-merge.in  mkinstalldirs
third/cns/: .build  CYGNUS  ChangeLog  HOWTO-BONES  Makefile.athena  Makefile.in  README  config.guess  config.sub  configure  configure.in  debian.README  debian.control  debian.postinst  debian.prerm  debian.rules  dounifdef  pkginfo.src
third/eel/: AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  eel-2.0-uninstalled.pc.in  eel-2.0.pc.in  eel.spec  eel.spec.in  mkinstalldirs
third/gail/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  gail.pc.in  mkinstalldirs
third/gaim-encryption/: CHANGELOG  INSTALL  Makefile.am  Makefile.in  Makefile.mingw  NOTES  README  TODO  WISHLIST  aclocal.m4  config_ui.c  config_ui.h  configure  configure.ac  cryptproto.c  cryptproto.h  cryptutil.c  cryptutil.h  encrypt.c  encrypt.h  gaim-encryption-installer.nsi  ge_blist.c  ge_blist.h  ge_ui.c  ge_ui.h  gpg.c  gpg.h  icon_capable.xpm  icon_in_lock.xpm  icon_in_unlock.xpm  icon_lock.xpm  icon_out_capable.xpm  icon_out_lock.xpm  icon_out_unlock.xpm  icon_unlock.xpm  keys.c  keys.h  keys_ui.c  keys_ui.h  mkinstalldirs  (+18 more)
third/gal/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  gal.pc.in  gal.spec  gal.spec.in  galConf.sh.in  ltmain.sh  mkinstalldirs  xml-i18n-merge.in  xml-i18n-update.in
third/gal2/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  gal-2.0.pc.in  gal-2.2.pc.in  gal.spec  gal.spec.in  intltool-merge.in
third/gconf-editor/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in  intltool-merge.in  mkinstalldirs
third/ggv/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in  ggv.desktop  ggv.desktop.in  ggv.schemas  ggv.spec  ggv.spec.in  intltool-merge.in  mkinstalldirs
third/gnome-mag/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  gnome-mag-1.0.pc.in  intltool-merge.in  mkinstalldirs
third/gnome-media/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  gnome-media.spec  gnome-media.spec.in  mkinstalldirs
third/gnome-mime-data/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  check-mime.pl  config.h.in  configure  configure.in  gnome-mime-data.spec  gnome-mime-data.spec.in  gnome-vfs-mime-magic  gnome-vfs.applications  gnome-vfs.keys  gnome-vfs.keys.in  gnome-vfs.mime  mkinstalldirs
third/gnome-netstatus/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
third/gnome-print/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  gnome-font-install.c  gnome-print.spec  gnome-print.spec.in  mkinstalldirs  run-gnome-font-install
(+59318 files in other folders)
