dnl Configure script for bug-buddy

AC_INIT(src/bug-buddy.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(bug-buddy, 2.2.0)

AM_MAINTAINER_MODE
AC_PROG_INTLTOOL

SCROLLKEEPER_REQUIRED=0.3.8
AC_SUBST(SCROLLKEEPER_REQUIRED)

## Begin tests for scrollkeeper
AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
if test x$SCROLLKEEPER_CONFIG = xno; then
  AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper package)
fi

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM

GDK_PIXBUF_REQUIRED="gdk-pixbuf-2.0 >= 2.0.0"
GMODULE_REQUIRED="gmodule-2.0 >= 2.0.0"
GNOME_VFS_REQUIRED="gnome-vfs-2.0 >= 1.9.1"
LIBGNOME_REQUIRED="libgnome-2.0 >= 1.104.0"
LIBGNOMECANVAS_REQUIRED="libgnomecanvas-2.0 >= 1.104.0"
LIBGNOMEUI_REQUIRED="libgnomeui-2.0 >= 1.104.0"
LIBGLADE_REQUIRED="libglade-2.0 >= 1.99.6"
LIBXML_REQUIRED="libxml-2.0 >= 2.4.6"

PKG_CHECK_MODULES(BUG_BUDDY, 
[
	$GDK_PIXBUF_REQUIRED
	$GMODULE_REQUIRED
	$GNOME_VFS_REQUIRED 
	$LIBGNOME_REQUIRED
	$LIBGNOMECANVAS_REQUIRED
	$LIBGNOMEUI_REQUIRED
	$LIBGLADE_REQUIRED
	$LIBXML_REQUIRED
])

AC_SUBST(BUG_BUDDY_CFLAGS)
AC_SUBST(BUG_BUDDY_LIBS)

PKG_CHECK_MODULES(GNOME_CRASH, $LIBGNOMEUI_REQUIRED)
AC_SUBST(GNOME_CRASH_CFLAGS)
AC_SUBST(GNOME_CRASH_LIBS)

GETTEXT_PACKAGE=bug-buddy
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="az ar bg ca cs da de el en_GB es et eu fi fr ga gl hu it ja ko lt lv ms nl nn no pl pt pt_BR ro ru sk sl sv tr uk vi wa zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

AC_OUTPUT([
bug-buddy.spec
Makefile
bugzilla/Makefile
bugzilla/gnome/Makefile
bugzilla/ximian/Makefile
docs/Makefile
docs/C/Makefile
pixmaps/Makefile
po/Makefile.in
src/Makefile
])

dnl docs are totally hosed
dnl docs/Makefile
dnl docs/C/Makefile
dnl docs/it/Makefile

echo "

Configuration:

	CFLAGS:	${BUG_BUDDY_CFLAGS}

	LIBS:	${BUG_BUDDY_LIBS}

"
